# DeferredShading

./: CMakeLists.txt  LICENSE  README.md
Demos/: flythrough.demo  sfixed-120l.demo  sfixed-350l.demo  sfixed-70o-16l.demo  sfixed-70o-32l.demo  sfixed-70o-64l.demo  sfixed-800l.demo
Libs/: CMakeLists.txt
Libs/GLSlayer/: CMakeLists.txt
Libs/GLSlayer/Implementation/: GLBuffer.cpp  GLBuffer.h  GLCommon.cpp  GLCommon.h  GLContextInfo.h  GLFramebuffer.cpp  GLFramebuffer.h  GLQuery.cpp  GLQuery.h  GLRenderContext.cpp  GLRenderContext.h  GLRenderContext_Linux.cpp  GLRenderContext_Windows.cpp  GLResource.h  GLSamplerState.cpp  GLSamplerState.h  GLShader.cpp  GLShader.h  GLSlayerMessages.cpp  GLSlayerMessages.h  GLTexture.cpp  GLTexture.h  GLTransformFeedback.cpp  GLTransformFeedback.h  GLVertexFormat.cpp  GLVertexFormat.h
Libs/GLSlayer/Implementation/extensions/: extensions.txt  glelcg-xml.rb  glelcg.rb  glext_linux_flags.h  glext_linux_load_decl.h  glext_linux_load_def.inc  glext_linux_ptrs.h  glext_windows_funcs.h  glx_extensions.txt  glxext_flags.h  glxext_funcs.h  glxext_load_decl.h  glxext_load_def.inc  glxext_ptrs.h  h_glext.cpp  h_glext.h  make-exts.sh  make_exts.bat  wgl_extensions.txt  wglext_flags.h  wglext_funcs.h  wglext_load_decl.h  wglext_load_def.inc  wglext_ptrs.h
Libs/GLSlayer/Interface/GLSlayer/: Buffer.h  Common.h  FixXlibMacros.h  Framebuffer.h  Query.h  RenderContext.h  RenderContextInit.h  Resource.h  SamplerState.h  Shader.h  Texture.h  TransformFeedback.h  VertexFormat.h
Libs/Math/: geometry.h  mat3.h  mat4.h  math3d.h  mathio.h  mathutil.h  quat.h  transform.h  vec2.h  vec3.h  vec4.h
Libs/imgui/: CMakeLists.txt
Models/Sponza/: sponza.mtl
Models/Sponza/textures/: vase_plant_ddn.tga
Source/: Application.h  Application_Linux.cpp  Application_Linux.h  Application_Windows.cpp  Application_Windows.h  CMakeLists.txt  Console.h  DeferredRenderer.cpp  DeferredRenderer.h  DemoPlayer.cpp  DemoPlayer.h  IRenderer.h  Main.cpp  ObjScene.cpp  ObjScene.h  TgaLoader.cpp  TgaLoader.h  Utils.cpp  Utils.h
Source/Shaders/: DepthOnlyPass.vert  Forward.frag  Forward.vert  ForwardSinglePass.frag  ForwardTransp.frag  ForwardTranspSinglePass.frag  GeometryPass.frag  ImGui.frag  ImGui.vert  LightSource.frag  LightSource.vert  LightingPass.frag  LightingPass.vert  ScreenSpace.vert  VisGBuffer.frag
